==> drugo72/hidradio/Atmel/USBKEY_STK525-series6-hidio-2_0_2-doc/MAC_v_2_6_1/PAL/AVR32/AT32UC3A3256/Boards/REB_4_0_STK600/pal_board.c <==
#include <stdbool.h>
#include <stdlib.h>
#include "pal_types.h"
#include "pal.h"
#include "pal_boardtypes.h"
#include "pal_config.h"
#include "pal_internal.h"
#include "pal_timer.h"

static uint8_t at25010_read_byte(uint8_t addr)
{

    uint8_t read_value;
#if 0
    RST_LOW();
    ENTER_CRITICAL_REGION();

    SS_LOW();

    PAL_WAIT_1_US();

    SPI_DATA_REG = AT25010_CMD_READ;
    SPI_WAIT();
    SPI_DATA_REG = addr & 0x7F; // mask out Bit 7 for 128x8 EEPROM
    SPI_WAIT();

    SPI_DATA_REG = 0;   // dummy value to start SPI transfer
    SPI_WAIT();
    read_value = SPI_DATA_REG;

    SS_HIGH();
    LEAVE_CRITICAL_REGION();
    RST_HIGH();
#endif
    return read_value;
}

retval_t extern_eeprom_get(ps_id_t attribute, void *value)
{
#if 0
    uint8_t i;
    struct cfg_eeprom_data cfg;
    uint8_t *up;
    uint16_t crc;

    // Read data from external EEPROM.
    for (i = 0, up = (uint8_t *)&cfg; i < sizeof(cfg); i++, up++)
    {
        *up = at25010_read_byte(i);
    }

    // Calcute CRC to validate data correctness
    for (i = 0, crc = 0, up = (uint8_t *)&cfg; i < sizeof(cfg); i++, up++)
    {
        crc = CRC_CCITT_UPDATE(crc, *up);
    }
    if (crc != 0)
    {
        return FAILURE;
    }

    // Get the requested value out of the EEPROM data structure
    switch (attribute)
    {
        case PS_IEEE_ADDR:
            *(uint64_t *)value = cfg.binary_data.struct_binary.mac_address;
            break;

        case PS_XTAL_TRIM:
            *(uint8_t *)value = cfg.binary_data.struct_binary.cal_16mhz;
            break;

        default:
            return UNSUPPORTED_ATTRIBUTE;
    }
#endif
    return SUCCESS;
}

void pal_led_init(void)
{
        gpio_enable_output(LED0_PIN);
        gpio_enable_output(LED1_PIN);
        gpio_enable_output(LED2_PIN);
}

void pal_led(led_id_t led_no, led_action_t led_setting)
{
    uint8_t pin;

    switch (led_no)
    {
        case LED_0: pin = LED0_PIN; break;
        case LED_1: pin = LED1_PIN; break;
        case LED_2: pin = LED2_PIN; break;
        default: pin = LED2_PIN; break;
    }

    switch (led_setting)
    {
        case LED_ON: gpio_clr_gpio_pin(pin); break;

        case LED_OFF: gpio_set_gpio_pin(pin); break;

        case LED_TOGGLE: gpio_tgl_gpio_pin(pin); break;
        default: /* do nothing */ break;
    }
}
