==> drugo72/hidradio/Atmel/USBKEY_STK525-series6-hidio-2_0_2-doc/MAC_v_2_6_1/PAL/MEGA_RF/ATMEGA128RFA1/Boards/RCB_6_3_PLAIN/pal_board.c <==
#include <stdbool.h>
#include <stdlib.h>
#include "pal.h"
#include "pal_boardtypes.h"
#include "pal_config.h"
#define AT25010_CMD_WREN  0x06  /**< Set Write Enable Latch */
#define AT25010_CMD_WRDI  0x04  /**< Reset Write Enable Latch */
#define AT25010_CMD_RDSR  0x05  /**< Read Status Register */
#define AT25010_CMD_WRSR  0x01  /**< Write Status Register */
#define AT25010_CMD_READ  0x03  /**< Read Data from Memory Array */
#define AT25010_CMD_WRITE 0x02  /**< Write Data to Memory Array */
#define AT25010_STATUS_NRDY 0x01 /**< not ready */
#define AT25010_STATUS_WE   0x02 /**< write enabled */
#define AT25010_BP0         0x04 /**< block-protection bit 0 */
#define AT25010_BP1         0x08 /**< block-protection bit 1 */
#define CFG_FEATURE1_RFCONN             0x01
#define CFG_FEATURE1_ANTENNA            0x02
#define CFG_FEATURE1_EXDIV              0x04
#define CFG_FEATURE1_RESV3              0x08
#define CFG_FEATURE1_PA                 0x10
#define CFG_FEATURE1_LNA                0x20
#define CFG_FEATURE1_RESV6              0x40
#define CFG_FEATURE1_RESV7              0x80
#define CFG_NAMELEN             (32 - sizeof(uint16_t))
#define CFG_BINARYLEN           32
#include <util/crc16.h>
#define CRC_CCITT_UPDATE(crc, data) _crc_ccitt_update(crc, data)
#define CRC_CCITT_UPDATE(crc, data) crc_ccitt_update(crc, data)

static uint8_t at25010_read_byte(uint8_t addr)
{
    uint8_t read_value;

    EXT_EE_CS_PORT &= ~EXT_EE_CS_PIN;

    PAL_WAIT_1_US();

    SPDR = AT25010_CMD_READ;
    while ((SPSR & _BV(SPIF)) == 0)
        /* wait */;
    SPDR = addr & 0x7F; // mask out Bit 7 for 128x8 EEPROM
    while ((SPSR & _BV(SPIF)) == 0)
        /* wait */;

    SPDR = 0;   // dummy value to start SPI transfer
    while ((SPSR & _BV(SPIF)) == 0)
        /* wait */;
    read_value = SPDR;

    EXT_EE_CS_PORT |= EXT_EE_CS_PIN;

    return read_value;
}

retval_t extern_eeprom_get(uint8_t start_offset, uint8_t length, void *value)
{
    uint8_t i;
    struct cfg_eeprom_data cfg;
    uint8_t *up;
    uint16_t crc;

    // Read data from external EEPROM.
    at25010_spi_setup();
    for (i = 0, up = (uint8_t *)&cfg; i < sizeof(cfg); i++, up++)
    {
        *up = at25010_read_byte(i);
    }
    at25010_spi_cleanup();

    // Calcute CRC to validate data correctness
    for (i = 0, crc = 0, up = (uint8_t *)&cfg; i < sizeof(cfg); i++, up++)
    {
        crc = CRC_CCITT_UPDATE(crc, *up);
    }
    if (crc != 0)
    {
        return FAILURE;
    }

    /* Copy data from local cfg structure variable to target storage location */
    memcpy(value, ((uint8_t *)&cfg) + start_offset, length);

    return MAC_SUCCESS;
}

void pal_led_init(void)
{
    LED_PORT |= (1 << LED_PIN_0);
    LED_PORT_DIR |= (1 << LED_PIN_0);
    LED_PORT |= (1 << LED_PIN_1);
    LED_PORT_DIR |= (1 << LED_PIN_1);
    LED_PORT |= (1 << LED_PIN_2);
    LED_PORT_DIR |= (1 << LED_PIN_2);
}

void pal_led(led_id_t led_no, led_action_t led_setting)
{
    switch (led_no)
    {
        default:
        case 0:
            switch (led_setting)
            {
                case LED_ON:    LED_PORT &= ~(1 << LED_PIN_0); break;
                case LED_OFF:   LED_PORT |= (1 << LED_PIN_0); break;
                case LED_TOGGLE: LED_PORT ^= (1 << LED_PIN_0); break;
            }
            break;

        case 1:
            switch (led_setting)
            {
                case LED_ON:    LED_PORT &= ~(1 << LED_PIN_1); break;
                case LED_OFF:   LED_PORT |= (1 << LED_PIN_1); break;
                case LED_TOGGLE: LED_PORT ^= (1 << LED_PIN_1); break;
            }
            break;

        case 2:
            switch (led_setting)
            {
                case LED_ON:    LED_PORT &= ~(1 << LED_PIN_2); break;
                case LED_OFF:   LED_PORT |= (1 << LED_PIN_2); break;
                case LED_TOGGLE: LED_PORT ^= (1 << LED_PIN_2); break;
            }
            break;
    }
}
